--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,9 +1,7 @@
 // Add your dependencies here
 
 dependencies {
-    compile("com.github.GTNewHorizons:CreativeCore:master-SNAPSHOT:dev")
+    compile('com.github.GTNewHorizons:CreativeCore:1.3.26-GTNH:dev')
 
-    compileOnly("com.github.GTNewHorizons:CodeChickenLib:master-SNAPSHOT:dev") {
-        transitive = false
-    }
+    compileOnly('com.github.GTNewHorizons:CodeChickenLib:1.1.5.3:dev')
 }
